# ufoNormalizer

./: .coveragerc  .gitignore  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-package.yml  run-tests.yml
normalization/: test_ufonormalizer.py  ufoNormalizer.py  ufonormalizer  ufonormalizer.py
normalization/data/glif/: format1.glif  format2.glif
src/: ufonormalizer.py
src/ufonormalizer/: __init__.py  _version.py
tests/: test_ufonormalizer.py
tests/data/glif/: format1.glif  format2.glif  formatNone.glif
