[bumpversion]
current_version = 0.4.2
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = final
values = 
	dev
	final

[bumpversion:part:dev]

[bumpversion:file:src/ufonormalizer.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[wheel]
universal = 1

[sdist]
formats = zip

[metadata]
license_file = LICENSE.txt

